# liveops-sentinel

./: .gitignore  BUILD_ARCHITECTURE.md  BUILD_REPORT.md  CMakeLists.txt  CURRENT_STATUS.md  LICENSE  QUICK_START.md  README.md  build_local.bat  deploy.bat  deploy.ps1  fix_all_compilation_errors.bat  fix_all_source_files.bat  fix_autoreconf_complete.bat  fix_autoreconf_final_v2.bat  fix_build_errors.bat  fix_cmake_final.bat  fix_console_app.bat  fix_console_complete.bat  fix_release.bat  fix_sdl2_removal.bat  fix_source_code.bat  fix_vcpkg_final.bat  fix_workflow.bat  fix_workflow_final.bat  remove_bat_files.bat
.github/workflows/: release-windows.yml  release.yml
assets/: config.example.json
attic/: MemoryManager.cpp  MemoryManager.h  Notifier.cpp  Notifier.h  ObsClient.cpp  ObsClient.h  PerformanceOptimizer.cpp  PerformanceOptimizer.h  UpdateManager.cpp  UpdateManager.h
attic/scripts/: fix_all_compilation_errors.bat  fix_autoreconf_errors.bat  fix_autoreconf_final.bat  fix_cmake_compatibility.bat  fix_console_app.bat  fix_sdl2_removal.bat
attic/scripts/old/: clean_repo.cmd  create_portable.ps1  make_portable_zip.ps1
attic/unused_src/backend/: main.cpp
attic/unused_src/diag/: Recommendation.cpp
attic/unused_src/ipc/: IpcLoop.h
attic/unused_src/ui/: AppGLFW.cpp  AppGLFW.h  ChartRenderer.h
attic/unused_src/ui_py/: main.py  requirements.txt
attic/unused_src/ui_py/core/: metric_bus.py  score.py
attic/unused_src/ui_py/packaging/: liveops_gui.spec
attic/unused_src/ui_py/widgets/: gauge.py  status_card.py
backup/: CURRENT_STATUS.md
backup/scripts/: create_release.bat  fix_all_source_files.bat  fix_console_complete.bat  fix_source_code.bat
backup/scripts/old/: build_console_win.cmd  build_simple.ps1  create_installer.ps1  make_release_win.ps1  quick_build.cmd
backup/unused_src/ipc/: IpcLoop.cpp
backup/unused_src/ui_py/: backend.py  settings.py  setup_wizard.py  widgets.py
backup/unused_src/ui_py/packaging/: installer.iss
backup/unused_src/ui_py/views/: dashboard.py
backup/unused_src/ui_py/widgets/: metric_graph.py
build.vs_20250823_164521/: ALL_BUILD.vcxproj  INSTALL.vcxproj  ZERO_CHECK.vcxproj  liveops_sentinel.sln  liveops_sentinel.vcxproj
build.vs_20250823_164807/: ALL_BUILD.vcxproj  INSTALL.vcxproj  ZERO_CHECK.vcxproj  liveops_sentinel.sln  liveops_sentinel.vcxproj
build_20250823_165227/: ALL_BUILD.vcxproj  INSTALL.vcxproj  ZERO_CHECK.vcxproj  liveops_sentinel.sln  liveops_sentinel.vcxproj
build_console/: ALL_BUILD.vcxproj  INSTALL.vcxproj  ZERO_CHECK.vcxproj  liveops_sentinel.sln  liveops_sentinel.vcxproj
build_console_20250823_153010/: ALL_BUILD.vcxproj  INSTALL.vcxproj  ZERO_CHECK.vcxproj  liveops_sentinel.sln  liveops_sentinel.vcxproj
build_gui/: ALL_BUILD.vcxproj  INSTALL.vcxproj  ZERO_CHECK.vcxproj  liveops_sentinel.sln  liveops_sentinel.vcxproj
docs/: DEVELOPER_GUIDE.md  REFACTORING_SUMMARY.md  STATUS.md  USER_MANUAL.md
scripts/: README.md  build.ps1  build_console_win.ps1  build_release_win.ps1  clean_repo.ps1  inject_repo_url.py  invoke_with_heartbeat.ps1  run.ps1  run_latest_console.cmd  setup_vcpkg.ps1  simple_build.cmd  test.ps1  update_vcpkg_baseline.ps1
src/: main.cpp
src/alert/: Notifier.cpp  Notifier.h  NotifierStub.cpp
src/app/: App.cpp  App.h
src/core/: Config.cpp  Config.h  Metrics.cpp  Metrics.h  PerformanceManager.cpp  PerformanceManager.h  ReportWriter.cpp  ReportWriter.h  Sentinel.cpp  Sentinel.h  SystemMetrics.cpp  SystemMetrics.h
src/diag/: BandwidthBench.cpp  BandwidthBench.h  Recommendation.cpp  Recommendation.h
src/net/: BandwidthTest.cpp  BandwidthTest.h  NetworkDiagnostics.cpp  NetworkDiagnostics.h  Probe.cpp  Probe.h  Probe_clean.cpp
src/notify/: AlertManager.cpp  AlertManager.h  AlertScheduler.cpp  AlertScheduler.h
src/obs/: EventLog.cpp  EventLog.h  ObsClient.cpp  ObsClient.h  ObsClientStub.cpp
src/sys/: ProcessMon.cpp  ProcessMon.h
src/ui/: AppGLFW.cpp  AppGLFW.h  Checklist.cpp  Checklist.h  Dashboard.cpp  Dashboard.h  WebhookWizard.cpp  WebhookWizard.h
tests/: CMakeLists.txt  performance_test.cpp  test_alert_cooldown.cpp  test_config.cpp  test_eventlog.cpp  test_metrics.cpp  test_probe.cpp  test_recommendation.cpp  test_reportwriter.cpp  test_thresholds.cpp
ui_py/: __init__.py  main.py  obs_connection_guide.md  platform_rules.py  requirements.txt  settings.py  setup_wizard.py  test_obs_connection.py  widgets.py
ui_py/actions/: diagnose.py
ui_py/attic/ui_py/: backend_process.py  metric_graph.py  obs_client.py  obs_password_check.md  obs_settings_dialog.py  test_obs_v5.py  zip_exporter.py
ui_py/core/: metric_bus.py  obs_client.py  obs_client_manager.py  obs_poller.py  score.py  stream_health_monitor.py
ui_py/packaging/: build_portable.py  liveops_gui.spec
ui_py/views/: dashboard.py  integrated_settings_dialog.py
ui_py/widgets/: help_dialog.py  metric_graph.py  obs_settings_display.py  simple_graph.py  status_card.py
